--- a/apps/website/src/index.html
+++ b/apps/website/src/index.html
@@ -5,6 +5,7 @@
     <title>Nicos Grünpflege</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Gärtnerdienste, Garten, Rasen mähen" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
