--- a/apps/website/src/index.html
+++ b/apps/website/src/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <nicosgruenpflege-root></nicosgruenpflege-root>
+    <div class="content">
+      <nicosgruenpflege-root></nicosgruenpflege-root>
+  </div>
   </body>
 </html>
